syntax = "proto3";
package industries;
import "base.proto";

service IndustryService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QueryIndustry) returns (GetListResponse) {}
  rpc create(Industry) returns (GetOneResponse) {}
  rpc update(Industry) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}
message Industry {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional string name = 7;
  optional string level1 = 8;
  optional int32 level2 = 9;
  optional int32 level3 = 10;
  optional int32 level4 = 11;
  optional int32 level5 = 12;
}
message QueryIndustry {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional string name = 11;
  optional string level1 = 12;
  optional int32 level2 = 13;
  optional int32 level3 = 14;
  optional int32 level4 = 15;
  optional int32 level5 = 16;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated Industry data = 6;
}

message GetOneResponse {
  string message = 1;
  optional Industry data = 2;
}